@@ -9,6 +9,8 @@ What's New in Python 2.7.7?
 Core and Builtins
 -----------------
 
+- Issue #20437: Fixed 43 potential bugs when deleting objects references.
+
 - Issue #20494: Ensure that free()d memory arenas are really released on POSIX
   systems supporting anonymous memory mappings.  Patch by Charles-François
   Natali.
